gcc/testsuite/sarif-replay.dg/2.1.0-invalid/3.13.2-version-not-a-string.sarif
{ "version" : 42 } // { dg-error "15: expected sarifLog.version to be a JSON string; got JSON number \\\[SARIF v2.1.0 ยง3.13.2\\\]" }

/* { dg-begin-multiline-output "" }
    1 | { "version" : 42 }
      |               ^~
   { dg-end-multiline-output "" } */
